# pair

./: .gitignore  README.md  example.md  requirements.txt  setup.cfg
pair_ai/: apply_patch.py  context_loader.py  example.py  example_model.py  exceptions.py  extract.py  findfilt.py  github_api.py  gpt_wrapper.py  image_to_data_url.py  openai_models.py  pair.py  pair_context.py  pair_state.py  pairwise.py  pdf_text.py  retry.py
